--- a/app/views/layouts/default.handlebars
+++ b/app/views/layouts/default.handlebars
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <link rel="stylesheet" href="/css/main.css">
+    <link rel="stylesheet" type="text/css" href="/css/main.css">
     <title>Chess WebApp</title>
 </head>
 
@@ -26,25 +26,6 @@
                             <div class="dropdown-divider"></div>
                             <a class="dropdown-item" href="../cerulean/">Cerulean</a>
                             <a class="dropdown-item" href="../cosmo/">Cosmo</a>
-                            <a class="dropdown-item" href="../cyborg/">Cyborg</a>
-                            <a class="dropdown-item" href="../darkly/">Darkly</a>
-                            <a class="dropdown-item" href="../flatly/">Flatly</a>
-                            <a class="dropdown-item" href="../journal/">Journal</a>
-                            <a class="dropdown-item" href="../litera/">Litera</a>
-                            <a class="dropdown-item" href="../lumen/">Lumen</a>
-                            <a class="dropdown-item" href="../lux/">Lux</a>
-                            <a class="dropdown-item" href="../materia/">Materia</a>
-                            <a class="dropdown-item" href="../minty/">Minty</a>
-                            <a class="dropdown-item" href="../pulse/">Pulse</a>
-                            <a class="dropdown-item" href="../sandstone/">Sandstone</a>
-                            <a class="dropdown-item" href="../simplex/">Simplex</a>
-                            <a class="dropdown-item" href="../sketchy/">Sketchy</a>
-                            <a class="dropdown-item" href="../slate/">Slate</a>
-                            <a class="dropdown-item" href="../solar/">Solar</a>
-                            <a class="dropdown-item" href="../spacelab/">Spacelab</a>
-                            <a class="dropdown-item" href="../superhero/">Superhero</a>
-                            <a class="dropdown-item" href="../united/">United</a>
-                            <a class="dropdown-item" href="../yeti/">Yeti</a>
                         </div>
                     </li>
                     <li class="nav-item">
@@ -80,7 +61,6 @@
             <div class="row">
                 <div class="col-lg-8 col-md-7 col-sm-6">
                 </div>
-
             </div>
         </div>
 
@@ -100,7 +80,7 @@
                         <li><a href="../help/#api">API</a></li>
                         <li><a href="../help/#donate">Donate</a></li>
                     </ul>
-                    <p>Made by <a href="https://thomaspark.co">Thomas Park</a>.</p>
+                    <p>Layout made by <a href="https://thomaspark.co">Thomas Park</a>.</p>
                     <p>Code released under the <a
                             href="https://github.com/thomaspark/bootswatch/blob/master/LICENSE">MIT License</a>.</p>
                     <p>Based on <a href="https://getbootstrap.com" rel="nofollow">Bootstrap</a>. Icons from <a
