--- a/app/views/main/index.handlebars
+++ b/app/views/main/index.handlebars
@@ -1,1 +1,4 @@
-<div>{{content}}</div>
+<div>
+    {{content}}
+    <button type="button" class="btn btn-outline-success"><span class="fa fa-trash"></span></button>
+</div>
