Layout padrao reformado

--- a/app/views/main/index.handlebars
+++ b/app/views/main/index.handlebars
@@ -1,4 +1,10 @@
-<div>
+<div class="row">
+    <div class="col-lg-12">
+        <div class="bs-component">
+            <ol class="breadcrumb">
+                <li class="breadcrumb-item active">Home</li>
+            </ol>
+        </div>
+    </div>
     {{content}}
-    <button type="button" class="btn btn-outline-success"><span class="fa fa-trash"></span></button>
 </div>
