--- a/app/views/layouts/default.handlebars
+++ b/app/views/layouts/default.handlebars
@@ -11,58 +11,22 @@
 
     <div class="navbar navbar-expand-lg fixed-top navbar-dark bg-primary">
         <div class="container">
-            <a href="../" class="navbar-brand">Bootswatch</a>
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive"
-                aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
+            <a href="../" class="navbar-brand">ChessApp</a>
             <div class="collapse navbar-collapse" id="navbarResponsive">
                 <ul class="navbar-nav">
-                    <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#" id="themes">Themes <span
-                                class="caret"></span></a>
-                        <div class="dropdown-menu" aria-labelledby="themes">
-                            <a class="dropdown-item" href="../default/">Default</a>
-                            <div class="dropdown-divider"></div>
-                            <a class="dropdown-item" href="../cerulean/">Cerulean</a>
-                            <a class="dropdown-item" href="../cosmo/">Cosmo</a>
-                        </div>
+                    <li class="nav-item">
+                        <a class="nav-link" href="/curso">Cursos</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="../help/">Help</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="https://blog.bootswatch.com">Blog</a>
-                    </li>
-                    <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#" id="download">Slate <span
-                                class="caret"></span></a>
-                        <div class="dropdown-menu" aria-labelledby="download">
-                            <a class="dropdown-item" target="_blank"
-                                href="https://jsfiddle.net/bootswatch/g1q7jxzf/">Open in JSFiddle</a>
-                            <div class="dropdown-divider"></div>
-                            <a class="dropdown-item" href="../4/slate/bootstrap.min.css" download>bootstrap.min.css</a>
-                            <a class="dropdown-item" href="../4/slate/bootstrap.css" download>bootstrap.css</a>
-                            <div class="dropdown-divider"></div>
-                            <a class="dropdown-item" href="../4/slate/_variables.scss" download>_variables.scss</a>
-                            <a class="dropdown-item" href="../4/slate/_bootswatch.scss" download>_bootswatch.scss</a>
-                        </div>
+                        <a class="nav-link" href="/about">Sobre</a>
                     </li>
                 </ul>
-
             </div>
         </div>
     </div>
 
 
     <div class="container">
-
-        <div class="page-header" id="banner">
-            <div class="row">
-                <div class="col-lg-8 col-md-7 col-sm-6">
-                </div>
-            </div>
-        </div>
 
         {{{body}}}
 
@@ -71,7 +35,7 @@
                 <div class="col-lg-12">
 
                     <ul class="list-unstyled">
-                        <li class="float-lg-right"><a href="#top">Back to top</a></li>
+                        <li class="float-lg-right"><a href="#top">Voltar ao Topo</a></li>
                         <li><a href="https://blog.bootswatch.com"
                                 onclick="pageTracker._link(this.href); return false;">Blog</a></li>
                         <li><a href="https://blog.bootswatch.com/rss/">RSS</a></li>
