--- a/app/views/main/about.handlebars
+++ b/app/views/main/about.handlebars
@@ -1,1 +1,11 @@
-<div>{{content}}</div>
+<div class="row">
+    <div class="col-lg-12">
+        <div class="bs-component">
+            <ol class="breadcrumb">
+                <li class="breadcrumb-item"><a href="/">Home</a></li>
+                <li class="breadcrumb-item active">Sobre</li>
+            </ol>
+        </div>
+    </div>
+    <div>{{content}}</div>
+</div>
