--- a/app/views/curso/index.handlebars
+++ b/app/views/curso/index.handlebars
@@ -31,7 +31,7 @@
                     <tr class="table-active">
                         <th scope="row">{{id}}</th>
                         <td>{{sigla}}</td>
-                        <td>{{descricao}}</td>
+                        <td>{{nome}}</td>
                         <td>
                             <a class="btn btn-secondary btn-sm" href="/curso/read/{{id}}"><i class="fas fa-eye"></i></a>
                             <a class="btn btn-warning btn-sm" href="/curso/update/{{id}}"><i
