--- a/app/views/curso/update.handlebars
+++ b/app/views/curso/update.handlebars
@@ -24,37 +24,38 @@
 
             <div class="form-group">
                 <label for="nome">Nome</label>
-                <input type="text" class="form-control" name="nome" id="nome" placeholder="Digite a nome do curso" value="{{curso.nome}}">
+                <input type="text" class="form-control {{hasError errors "nome"}}" name="nome" id="nome" placeholder="Digite a nome do curso" value="{{curso.nome}}">
+                <div class="invalid-feedback">{{getError errors "nome"}}</div>
             </div>
 
             <div class="form-group">
                 <label for="descricao">Descrição</label>
-                <input type="text" class="form-control" name="descricao" id="descricao" placeholder="Digite uma descrição para o curso" value="{{curso.descricao}}">
+                <textarea type="text" class="form-control" name="descricao" id="descricao" rows=3 placeholder="Digite uma descrição para o curso">{{curso.descricao}}</textarea>
             </div>
 
             <fieldset class="form-group">
                 <legend>Área do Curso</legend>
                 <div class="form-check">
                     <label class="form-check-label">
-                        <input type="radio" class="form-check-input" name="id_area" id="id_area_agr" value="1">
+                        <input type="radio" class="form-check-input" name="id_area" id="id_area_agr" value="1" {{radio_select curso.id_area 1}}>
                         Agrárias
                     </label>
                 </div>
                 <div class="form-check">
                     <label class="form-check-label">
-                        <input type="radio" class="form-check-input" name="id_area" id="id_area_bio" value="2">
+                        <input type="radio" class="form-check-input" name="id_area" id="id_area_bio" value="2" {{radio_select curso.id_area 2}}>
                         Biológicas
                     </label>
                 </div>
                 <div class="form-check">
                     <label class="form-check-label">
-                        <input type="radio" class="form-check-input" name="id_area" id="id_area_exa" value="3">
+                        <input type="radio" class="form-check-input" name="id_area" id="id_area_exa" value="3" {{radio_select curso.id_area 3}}>
                         Exatas
                     </label>
                 </div>
                 <div class="form-check">
                     <label class="form-check-label">
-                        <input type="radio" class="form-check-input" name="id_area" id="id_area_hum" value="4">
+                        <input type="radio" class="form-check-input" name="id_area" id="id_area_hum" value="4" {{radio_select curso.id_area 4}}>
                         Humanas
                     </label>
                 </div>
