--- a/app/views/curso/update.handlebars
+++ b/app/views/curso/update.handlebars
@@ -24,8 +24,8 @@
 
             <div class="form-group">
                 <label for="nome">Nome</label>
-                <input type="text" class="form-control {{hasError errors "nome"}}" name="nome" id="nome" placeholder="Digite a nome do curso" value="{{curso.nome}}">
-                <div class="invalid-feedback">{{getError errors "nome"}}</div>
+                <input type="text" class="form-control {{hasError erros "nome"}}" name="nome" id="nome" placeholder="Digite a nome do curso" value="{{curso.nome}}">
+                <div class="invalid-feedback">{{getError erros "nome"}}</div>
             </div>
 
             <div class="form-group">
