Adicionado suporte a sessões e login de usuário

--- a/app/views/curso/create.handlebars
+++ b/app/views/curso/create.handlebars
@@ -48,6 +48,7 @@
 
             </fieldset>
 
+            <input type="hidden" name="_csrf" value="{{csrf}}">
             <button type="submit" id="botao_cadastrar" class="btn btn-secondary">Cadastrar</button>
 
         </form>
