--- a/app/views/main/signup.handlebars
+++ b/app/views/main/signup.handlebars
@@ -4,17 +4,17 @@
         <div class="bs-component">
             <ol class="breadcrumb">
                 <li class="breadcrumb-item"><a href="/">Home</a></li>
-                <li class="breadcrumb-item"><a href="/curso">Cursos</a></li>
-                <li class="breadcrumb-item active">Adicionar</li>
+                <li class="breadcrumb-item active">Signup</li>
             </ol>
         </div>
     </div>
 
     <div class="col-8">
-        <h1>Cadastro de Usuário</h1>
+        <h1>Criar conta</h1>
+        <h5>Deseja criar uma conta? Basta preencher o formulário abaixo.</h5>
     </div>
 
-    <div class="col-8">
+    <div class="col-8 mt-4">
 
         <form action='/signup' method="POST">
             <div class="form-group">
@@ -28,8 +28,8 @@
             </div>
 
             <div class="form-group">
-                <label for="id_curso">Selecione seu curso na UFAM</label>
-                <select class="form-control" name="id_curso" id="id_curso">
+                <label for="cursos">Selecione seu curso na UFAM</label>
+                <select class="form-control" name="cursos" id="cursos">
                     {{#each cursos}}
                         <option value="{{id}}">{{nome}}</option>
                     {{/each}}
@@ -48,14 +48,20 @@
 
             <div class="form-check">
                 <label class="form-check-label">
-                    <input class="form-check-input" type="checkbox" value="">Eu li e concordo com os <a href="#">termos de serviço</a>.
+                    <input class="form-check-input" type="checkbox">Eu li e concordo com os <a href="#">termos de serviço</a>.
                 </label>
             </div>
 
             <input type="hidden" name="_csrf" value="{{csrf}}">
-            <button type="submit" id="botao_cadastrar" class="btn btn-secondary">Cadastrar</button>
+            <button type="submit" id="botao_cadastrar" class="btn btn-secondary mt-4">Cadastrar</button>
 
         </form>
+
+    </div>
+
+    <div class="col-8 mt-5">
+
+        <h5>Já possui uma conta? <a href="/login">Faça login</a>.</h5>
 
     </div>
 
