--- a/app/views/curso/index.handlebars
+++ b/app/views/curso/index.handlebars
@@ -12,8 +12,7 @@
     <div class="col-lg-12 mt-2">
 
         <div class="page-header">
-            <h1 id="tables">Cursos Cadastrados <a href="/curso/create" class="btn btn-secondary btn-sm"><i
-                        class="fas fa-plus-circle"></i></a></h1>
+            <h1 id="tables">Cursos Cadastrados <a href="/curso/create" class="btn btn-secondary btn-sm"><i class="fas fa-plus-circle"></i></a></h1>
         </div>
 
         <div class="bs-component">
@@ -33,11 +32,9 @@
                         <td>{{sigla}}</td>
                         <td>{{nome}}</td>
                         <td>
-                            <a class="btn btn-secondary btn-sm" href="/curso/read/{{id}}"><i class="fas fa-eye"></i></a>
-                            <a class="btn btn-warning btn-sm" href="/curso/update/{{id}}"><i
-                                    class="fas fa-pencil-alt"></i></a>
-                            <a class="btn btn-danger btn-sm" href="/curso/delete/{{id}}"><i
-                                    class="far fa-trash-alt"></i></a>
+                            <button id="but-read-{{id}}" class="btn btn-secondary btn-sm" data-toggle="modal" data-target="#modal-read" data-id="{{id}}" data-sigla="{{sigla}}" data-nome="{{nome}}" data-descricao="{{descricao}}"><i class="fas fa-eye" aria-hidden="true"></i></button>
+                            <a class="btn btn-warning btn-sm" href="/curso/update/{{id}}"><i class="fas fa-pencil-alt"></i></a>
+                            <button id="but-del-{{id}}" class="btn btn-danger btn-sm" data-toggle="modal" data-target="#modal-delete" data-id="{{id}}" data-sigla="{{sigla}}" data-nome="{{nome}}"><i class="far fa-trash-alt" aria-hidden="true"></i></button>
                         </td>
                     </tr>
                     {{/each}}
@@ -46,5 +43,99 @@
         </div>
     </div>
 
+    <!-- Modal de Visualização de Curso -->
+    <div class="modal fade" id="modal-read" tabindex="-1" role="dialog" aria-labelledby="modal-read-label"
+        aria-hidden="true">
+        <div class="modal-dialog" role="document">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title" id="modal-read-title"></h5>
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Fechar"><span aria-hidden="true">×</span></button>
+                </div>
+                <div class="modal-body">
+                    <p id="modal-read-body"></p>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <!-- Modal de Exclusão de Curso -->
+    <div class="modal fade" id="modal-delete" tabindex="-1" role="dialog" aria-labelledby="modal-delete-label"
+        aria-hidden="true">
+        <div class="modal-dialog" role="document">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title" id="modal-read-title">Excluir Curso</h5>
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Fechar"><span aria-hidden="true">×</span></button>
+                </div>
+                <div class="modal-body">
+                    <p>Deseja mesmo excluir o curso: <span id="modal-del-resume"></span>?</p>
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-primary" data-dismiss="modal">Cancelar</button>
+                    <button type="button" class="btn btn-secondary" data-dismiss="modal" id="but-delete">Excluir</button>
+                </div>
+            </div>
+        </div>
+    </div>
 
 </div>
+
+<!-- Script em JQuery que cuida do modal de visualização de curso -->
+<script>
+    $(document).ready(function () {
+        $("[id*='but-read-']").click(function (event) {
+
+            var data = $(event.delegateTarget).data();
+
+            var header = `${data.id}. ${data.nome} (${data.sigla})`;
+            var body = data.descricao;
+
+            $("#modal-read-title").text(header);
+            $("#modal-read-body").text(body);
+
+        })
+    });
+</script>
+
+<!-- Script em JQuery que cuida do modal de remoção de curso -->
+<script>
+    $(document).ready(function () {
+        $("[id*='but-del-']").click(function (event) {
+
+            var data = $(event.delegateTarget).data();
+
+            var resume = `"${data.nome} (${data.sigla})"`;
+
+            $("#modal-del-resume").text(resume);
+            $("#but-delete").data("id", data.id);
+
+        })
+    });
+</script>
+
+<!-- Script em JQuery que cuida da remoção de curso da base de dados -->
+<script>
+    $(document).ready(function () {
+        $("#but-delete").click(function (event) {
+
+            var id = $(this).data("id");
+
+            $.ajax({
+                method: "POST",
+                url: "/curso/delete",
+                data: {
+                    id: id,
+                    _csrf: "{{csrf}}"
+                },
+                success: function (data) {
+                    window.location.replace("/curso");
+                },
+                error: function (erros) {
+                    console.log(erros);
+                }
+            });
+
+        });
+    });
+</script>
