Projeto organizado + Criação do Seeder 'cursos'

--- a/app/views/pages/entrance/login.handlebars
+++ b/app/views/pages/entrance/login.handlebars
@@ -31,7 +31,9 @@
                 </div>
 
                 <input type="hidden" name="_csrf" value="{{csrf}}">
+
                 <button type="submit" id="botao_cadastrar" class="btn btn-secondary mt-4">Login</button>
+                <a class="btn btn-primary mt-4" href="/">Cancelar</a>
 
             </form>
 
