--- a/app/views/pages/curso/create.handlebars
+++ b/app/views/pages/curso/create.handlebars
@@ -5,32 +5,31 @@
             <ol class="breadcrumb">
                 <li class="breadcrumb-item"><a href="/">Home</a></li>
                 <li class="breadcrumb-item"><a href="/curso">Cursos</a></li>
-                <li class="breadcrumb-item active">Atualizar</li>
+                <li class="breadcrumb-item active">Adicionar</li>
             </ol>
         </div>
     </div>
 
     <div class="col-8">
-        <h1>Atualizar Curso</h1>
+        <h1>Adicionar Curso</h1>
     </div>
 
     <div class="col-8">
 
-        <form action='/curso/update' method="POST">
+        <form action='/curso/create' method="POST">
             <div class="form-group">
                 <label for="sigla">Sigla</label>
-                <input type="text" class="form-control" name="sigla" id="sigla" placeholder="Digite a sigla do curso" value="{{curso.sigla}}">
+                <input type="text" class="form-control" name="sigla" id="sigla" placeholder="Digite a sigla do curso">
             </div>
 
             <div class="form-group">
                 <label for="nome">Nome</label>
-                <input type="text" class="form-control {{hasError erros "nome"}}" name="nome" id="nome" placeholder="Digite a nome do curso" value="{{curso.nome}}">
-                <div class="invalid-feedback">{{getError erros "nome"}}</div>
+                <input type="text" class="form-control" name="nome" id="nome" placeholder="Digite a nome do curso">
             </div>
 
             <div class="form-group">
                 <label for="descricao">Descrição</label>
-                <textarea type="text" class="form-control" name="descricao" id="descricao" rows=3 placeholder="Digite uma descrição para o curso">{{curso.descricao}}</textarea>
+                <textarea type="text" class="form-control" name="descricao" id="descricao" rows=4 placeholder="Digite uma descrição para o curso"></textarea>
             </div>
 
             <fieldset class="form-group">
@@ -40,7 +39,7 @@
                 {{#each areas}}
                 <div class="form-check">
                     <label class="form-check-label">
-                        <input type="radio" class="form-check-input" name="id_area" value={{id}} {{radio_select @root.curso.id_area id}}>
+                        <input type="radio" class="form-check-input" name="id_area" value={{id}}>
                         {{nome}}
                     </label>
                 </div>
@@ -48,10 +47,10 @@
 
             </fieldset>
 
-            <input type="hidden" name="id" value="{{curso.id}}">
             <input type="hidden" name="_csrf" value="{{csrf}}">
 
-            <button type="submit" id="botao_atualizar" class="btn btn-secondary">Atualizar</button>
+            <button type="submit" id="botao_cadastrar" class="btn btn-secondary">Cadastrar</button>
+            <a class="btn btn-primary" href="/curso">Cancelar</a>
 
         </form>
 
