--- a/app/views/pages/curso/index.handlebars
+++ b/app/views/pages/curso/index.handlebars
@@ -88,7 +88,7 @@
 
             var data = $(event.delegateTarget).data();
 
-            var header = `${data.id}. ${data.nome} (${data.sigla})`;
+            var header = `${data.nome} (${data.sigla})`;
             var body = data.descricao;
 
             $("#modal-read-title").text(header);
