--- a/app/views/pages/entrance/signup.handlebars
+++ b/app/views/pages/entrance/signup.handlebars
@@ -48,12 +48,14 @@
 
             <div class="form-check">
                 <label class="form-check-label">
-                    <input class="form-check-input" type="checkbox">Eu li e concordo com os <a href="#">termos de serviço</a>.
+                    <input class="form-check-input" type="checkbox">Eu li e concordo com os <a href="/legal/terms">termos de serviço</a>.
                 </label>
             </div>
 
             <input type="hidden" name="_csrf" value="{{csrf}}">
+
             <button type="submit" id="botao_cadastrar" class="btn btn-secondary mt-4">Cadastrar</button>
+            <a class="btn btn-primary mt-4" href="/">Cancelar</a>
 
         </form>
 
