Troca de layout e organizacao do projeto

--- a/app/views/pages/curso/create.handlebars
+++ b/app/views/pages/curso/create.handlebars
@@ -49,8 +49,8 @@
 
             <input type="hidden" name="_csrf" value="{{csrf}}">
 
-            <button type="submit" id="botao_cadastrar" class="btn btn-secondary">Cadastrar</button>
-            <a class="btn btn-primary" href="/curso">Cancelar</a>
+            <button type="submit" id="botao_cadastrar" class="btn btn-primary">Cadastrar</button>
+            <a class="btn btn-secondary" href="/curso">Cancelar</a>
 
         </form>
 
