--- a/app/views/pages/curso/update.handlebars
+++ b/app/views/pages/curso/update.handlebars
@@ -51,8 +51,8 @@
             <input type="hidden" name="id" value="{{curso.id}}">
             <input type="hidden" name="_csrf" value="{{csrf}}">
 
-            <button type="submit" id="botao_atualizar" class="btn btn-secondary">Atualizar</button>
-            <a class="btn btn-primary" href="/curso">Cancelar</a>
+            <button type="submit" id="botao_atualizar" class="btn btn-primary">Atualizar</button>
+            <a class="btn btn-secondary" href="/curso">Cancelar</a>
 
         </form>
 
