--- a/app/views/pages/entrance/signup.handlebars
+++ b/app/views/pages/entrance/signup.handlebars
@@ -54,8 +54,8 @@
 
             <input type="hidden" name="_csrf" value="{{csrf}}">
 
-            <button type="submit" id="botao_cadastrar" class="btn btn-secondary mt-4">Cadastrar</button>
-            <a class="btn btn-primary mt-4" href="/">Cancelar</a>
+            <button type="submit" id="botao_cadastrar" class="btn btn-primary mt-4">Cadastrar</button>
+            <a class="btn btn-secondary mt-4" href="/">Cancelar</a>
 
         </form>
 
