Corrigido bug na modelagem de curso e área (associações)

--- a/app/views/pages/curso/index.handlebars
+++ b/app/views/pages/curso/index.handlebars
@@ -16,7 +16,7 @@
         </div>
 
         <div class="bs-component">
-            <table class="table table-hover">
+            <table class="table table-hover table-striped">
                 <thead class="table-primary">
                     <tr>
                         <th scope="col">#</th>
@@ -44,8 +44,7 @@
     </div>
 
     <!-- Modal de Visualização de Curso -->
-    <div class="modal fade" id="modal-read" tabindex="-1" role="dialog" aria-labelledby="modal-read-label"
-        aria-hidden="true">
+    <div class="modal fade" id="modal-read" tabindex="-1" role="dialog" aria-labelledby="modal-read-label" aria-hidden="true">
         <div class="modal-dialog" role="document">
             <div class="modal-content">
                 <div class="modal-header">
@@ -60,8 +59,7 @@
     </div>
 
     <!-- Modal de Exclusão de Curso -->
-    <div class="modal fade" id="modal-delete" tabindex="-1" role="dialog" aria-labelledby="modal-delete-label"
-        aria-hidden="true">
+    <div class="modal fade" id="modal-delete" tabindex="-1" role="dialog" aria-labelledby="modal-delete-label" aria-hidden="true">
         <div class="modal-dialog" role="document">
             <div class="modal-content">
                 <div class="modal-header">
