Adicionado Socket.io ao projeto

--- a/app/views/layouts/default.handlebars
+++ b/app/views/layouts/default.handlebars
@@ -9,6 +9,7 @@
     <script src="/js/popper.js"></script>
     <script src="/js/bootstrap.min.js"></script>
     <script src="/js/all.min.js"></script>
+    <script src="/socket.io/socket.io.js"></script>
     
     <title>Chess WebApp</title>
 </head>
