--- a/app/views/layouts/default.handlebars
+++ b/app/views/layouts/default.handlebars
@@ -9,6 +9,8 @@
     <script src="/js/popper.js"></script>
     <script src="/js/bootstrap.min.js"></script>
     <script src="/js/all.min.js"></script>
+    <script src="/js/chess.min.js"></script>    
+    <script src="/js/chessboard-1.0.0.js"></script>  
     <script src="/socket.io/socket.io.js"></script>
     
     <title>Chess WebApp</title>
