--- a/public/scss/main.scss
+++ b/public/scss/main.scss
@@ -9,4 +9,5 @@
 
 // Estilos de páginas
 @import "./public/scss/homepage.scss";
+@import "./public/scss/about.scss";
 @import "./public/scss/breakable.scss";
