Modelagem ajustada de acordo com especificaçao do trabalho

--- a/app/views/pages/curso/create.handlebars
+++ b/app/views/pages/curso/create.handlebars
@@ -39,7 +39,7 @@
                 {{#each areas}}
                 <div class="form-check">
                     <label class="form-check-label">
-                        <input type="radio" class="form-check-input" name="id_area" value={{id}}>
+                        <input type="radio" class="form-check-input" name="area_id" value={{id}}>
                         {{nome}}
                     </label>
                 </div>
