--- a/app/views/pages/curso/update.handlebars
+++ b/app/views/pages/curso/update.handlebars
@@ -40,7 +40,7 @@
                 {{#each areas}}
                 <div class="form-check">
                     <label class="form-check-label">
-                        <input type="radio" class="form-check-input" name="id_area" value={{id}} {{radio_select @root.curso.id_area id}}>
+                        <input type="radio" class="form-check-input" name="area_id" value={{id}} {{radio_select @root.curso.area_id id}}>
                         {{nome}}
                     </label>
                 </div>
