--- a/app/views/layouts/default.handlebars
+++ b/app/views/layouts/default.handlebars
@@ -17,23 +17,48 @@
 </head>
 
 <body>
-
+    
     <div class="navbar navbar-expand-lg fixed-top navbar-dark bg-primary">
         <div class="container">
             <a href="../" class="navbar-brand">ChessApp</a>
             <div class="collapse navbar-collapse" id="navbarResponsive">
-                <ul class="navbar-nav">
+                <ul class="navbar-nav ml-auto">
+
+                    <!-- Opções de usuário logado -->
+                    {{#if session.uid}}
                     <li class="nav-item">
-                        <a class="nav-link" href="/curso">Cursos</a>
+                        <a class="nav-link" href="/partida">Nova Partida</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="/about">Sobre</a>
+                        <a class="nav-link" href="/ranking">Ranking</a>
                     </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="/curso">Curso</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="/sobre">Sobre</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="/logout">Logout [{{session.username}}]</a>
+                    </li>
+
+                    <!-- Opções quando não há usuário logado -->
+                    {{else}}
+                    <li class="nav-item">
+                        <a class="nav-link" href="/sobre">Sobre</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="/login">Login</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="/signup">Sign Up</a>
+                    </li>
+                    {{/if}}
+
                 </ul>
             </div>
         </div>
     </div>
-
 
     <div class="container">
 
