Ajustes de layout + criaçao da politica de cookies

--- a/app/views/layouts/default.handlebars
+++ b/app/views/layouts/default.handlebars
@@ -18,9 +18,12 @@
 
 <body>
     
-    <div class="navbar navbar-expand-lg fixed-top navbar-dark bg-primary">
+    <div id="layout-header" class="navbar navbar-expand-lg fixed-top navbar-dark bg-primary">
         <div class="container">
-            <a href="../" class="navbar-brand">ChessApp</a>
+            <a href="/" class="navbar-brand"><h3><img class="logo" src="/img/logo.png" style="width:36px" alt="" srcset="">&nbsp; Chess App</h3></a>
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
             <div class="collapse navbar-collapse" id="navbarResponsive">
                 <ul class="navbar-nav ml-auto">
 
