--- a/public/scss/main.scss
+++ b/public/scss/main.scss
@@ -11,3 +11,4 @@
 @import "./public/scss/homepage.scss";
 @import "./public/scss/about.scss";
 @import "./public/scss/breakable.scss";
+@import "./layouts/default.scss";
