--- a/app/views/pages/curso/index.handlebars
+++ b/app/views/pages/curso/index.handlebars
@@ -15,14 +15,14 @@
             <h1 id="tables">Cursos Cadastrados <a href="/curso/create" class="btn btn-secondary btn-sm"><i class="fas fa-plus-circle"></i></a></h1>
         </div>
 
-        <div class="bs-component">
+        <div class="bs-component"></div>
             <table class="table table-hover table-striped">
                 <thead class="table-primary">
                     <tr>
                         <th scope="col">#</th>
                         <th scope="col">Sigla</th>
                         <th scope="col">Nome</th>
-                        <th scope="col">Opções</th>
+                        <th scope="col" class="text-center">Opções</th>
                     </tr>
                 </thead>
                 <tbody>
@@ -31,7 +31,7 @@
                         <th scope="row">{{id}}</th>
                         <td>{{sigla}}</td>
                         <td>{{nome}}</td>
-                        <td>
+                        <td class="text-right">
                             <button id="but-read-{{id}}" class="btn btn-primary btn-sm" data-toggle="modal" data-target="#modal-read" data-id="{{id}}" data-sigla="{{sigla}}" data-nome="{{nome}}" data-descricao="{{descricao}}"><i class="fas fa-eye" aria-hidden="true"></i></button>
                             <a class="btn btn-secondary btn-sm" href="/curso/update/{{id}}"><i class="fas fa-pencil-alt"></i></a>
                             <button id="but-del-{{id}}" class="btn btn-danger btn-sm" data-toggle="modal" data-target="#modal-delete" data-id="{{id}}" data-sigla="{{sigla}}" data-nome="{{nome}}"><i class="far fa-trash-alt" aria-hidden="true"></i></button>
