Implementada Regra 9 - falta apenas o numero de vitorias no Handlebars

--- a/public/scss/homepage.scss
+++ b/public/scss/homepage.scss
@@ -1,8 +1,4 @@
-@mixin center () {
-    display: block;
-    margin-left: auto;
-    margin-right: auto;  
-}
+@import "./mixins/center-align.scss";
 
 #chess-welcome {
   
