--- a/app/views/pages/curso/index.handlebars
+++ b/app/views/pages/curso/index.handlebars
@@ -12,10 +12,10 @@
     <div class="col-lg-12 mt-2">
 
         <div class="page-header">
-            <h1 id="tables">Cursos Cadastrados <a href="/curso/create" class="btn btn-secondary btn-sm"><i class="fas fa-plus-circle"></i></a></h1>
+            <h1 class="text-center" id="tables">Cursos Cadastrados <a href="/curso/create" class="btn btn-secondary btn-sm"><i class="fas fa-plus-circle"></i></a></h1>
         </div>
 
-        <div class="bs-component"></div>
+        <div class="bs-component mt-4">
             <table class="table table-hover table-striped">
                 <thead class="table-primary">
                     <tr>
@@ -28,7 +28,7 @@
                 <tbody>
                     {{#each cursos}}
                     <tr class="table-light">
-                        <th scope="row">{{id}}</th>
+                        <th scope="row">{{index @index}}</th>
                         <td>{{sigla}}</td>
                         <td>{{nome}}</td>
                         <td class="text-right">
