--- a/app/views/pages/game/ranking.handlebars
+++ b/app/views/pages/game/ranking.handlebars
@@ -1,3 +1,43 @@
-<h1>
-    Ainda vou implementar a página de ranking
-</h1>
+<div id="view-ranking">
+
+    <div class="row">
+
+        <div class="col-lg-12">
+            <div class="bs-component">
+                <ol class="breadcrumb">
+                    <li class="breadcrumb-item"><a href="/">Home</a></li>
+                    <li class="breadcrumb-item active">Ranking</li>
+                </ol>
+            </div>
+        </div>
+
+        <div class="col-lg-12 mt-2">
+
+            <div class="page-header text-center">
+                <h1 id="tables">Ranking de Jogadores</h1>
+            </div>
+
+            <div class="bs-component mt-4">
+                <table class="table table-hover table-striped">
+                    <thead class="table-primary">
+                        <tr>
+                            <th scope="col">#</th>
+                            <th scope="col">Nome do Jogador</th>
+                            <th scope="col">Qtd. de Vitórias</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        {{#each ranking}}
+                        <tr class="table-light">
+                            <th scope="row">{{index @index}}</th>
+                            <td>{{usuario.nome}}</td>
+                            <td>{{vitorias}}</td>
+                        </tr>
+                        {{/each}}
+                    </tbody>
+                </table>
+            </div>
+        </div>
+    </div>
+
+</div>
