--- a/app/views/pages/homepage.handlebars
+++ b/app/views/pages/homepage.handlebars
@@ -19,7 +19,7 @@
 
             <div class="row">
                 <div class="col text-center mt-5">
-                    <a href="/game" class="btn btn-info">Jogar Agora!</a>
+                    <a href="/login" class="btn btn-info">Jogar Agora!</a>
                 </div>
             </div>
             
