--- a/public/scss/main.scss
+++ b/public/scss/main.scss
@@ -12,3 +12,4 @@
 @import "./public/scss/about.scss";
 @import "./public/scss/breakable.scss";
 @import "./layouts/default.scss";
+@import "./homepage-logged.scss";
