--- a/app/views/pages/game/ranking.handlebars
+++ b/app/views/pages/game/ranking.handlebars
@@ -30,7 +30,7 @@
                         {{#each ranking}}
                         <tr class="table-light">
                             <th scope="row">{{index @index}}</th>
-                            <td>{{usuario.nome}}</td>
+                            <td>{{winnerPlayer.nome}}</td>
                             <td>{{vitorias}}</td>
                         </tr>
                         {{/each}}
