--- a/public/scss/main.scss
+++ b/public/scss/main.scss
@@ -13,3 +13,4 @@
 @import "./public/scss/breakable.scss";
 @import "./layouts/default.scss";
 @import "./homepage-logged.scss";
+@import "./game/partida.scss";
