--- a/app/views/pages/homepage-logged.handlebars
+++ b/app/views/pages/homepage-logged.handlebars
@@ -24,8 +24,14 @@
         <a href="/partida/{{id}}">
             <div id="board-{{id}}"></div>
             <div class="small-info">
-                <span class="white"><i class="fas fa-chess-king"></i></span>{{user_id_1}}<br>
-                <span class="black"><i class="fas fa-chess-king"></i></span>{{user_id_2}}
+                <span class="white"><i class="fas fa-chess-king"></i></span>&nbsp;&nbsp;{{ownerPlayer.nome}}<br>
+
+                {{#if invitedPlayer.nome}}
+                    <span class="black"><i class="fas fa-chess-king"></i></span>&nbsp;&nbsp;{{invitedPlayer.nome}}
+                {{else}}
+                    Aguardando oponente
+                {{/if}}
+
             </div>
         </a>
     </div>
@@ -50,7 +56,7 @@
         <a href="/partida/{{id}}">
             <div id="board-{{id}}"></div>
             <div class="small-info">
-                <span class="white"><i class="fas fa-chess-king"></i></span>{{user_id_1}}
+                <span class="white"><i class="fas fa-chess-king"></i></span>&nbsp;&nbsp;{{ownerPlayer.nome}}
             </div>
         </a>
     </div>
