--- a/app/views/pages/game/ranking.handlebars
+++ b/app/views/pages/game/ranking.handlebars
@@ -31,7 +31,7 @@
                         <tr class="table-light">
                             <th scope="row">{{index @index}}</th>
                             <td>{{winnerPlayer.nome}}</td>
-                            <td>{{vitorias}}</td>
+                            <td>{{sequelizeGet this 'vitorias'}}</td>
                         </tr>
                         {{/each}}
                     </tbody>
