Correcão de bugs no controlador 'entrance'

--- a/app/views/pages/entrance/login.handlebars
+++ b/app/views/pages/entrance/login.handlebars
@@ -21,13 +21,13 @@
 
                 <div class="form-group">
                     <label for="email">e-mail</label>
-                    <input type="text" class="form-control" name="email" id="email" placeholder="fulanoac@dominio.com">
+                    <input type="text" class="form-control {{#if loginFailed}}is-invalid{{/if}}" name="email" id="email" placeholder="fulanoac@dominio.com">
                 </div>
 
                 <div class="form-group">
                     <label for="senha">Digite sua senha</label>
-                    <input type="password" class="form-control" name="senha" id="senha"
-                        placeholder="&bull;&bull;&bull;&bull;&bull;&bull;&bull;&bull;">
+                    <input type="password" class="form-control {{#if loginFailed}}is-invalid{{/if}}" name="senha" id="senha" placeholder="&bull;&bull;&bull;&bull;&bull;&bull;&bull;&bull;">
+                    <div class="invalid-feedback">e-mail ou senha inválidos</div>
                 </div>
 
                 <input type="hidden" name="_csrf" value="{{csrf}}">
